
syntax = "proto3";

package user;

option go_package = "user";

service UserService {
    rpc CreateUser(CreateUserDto) returns (User) {}
    rpc RemoveUser (RemoveUserDto) returns (User) {}
    rpc UpdateUser (UpdateUserDto) returns (User) {}
    rpc UpdateUserProfileImage (UpdateUserProfileImageDto) returns (User) {}
    
}

message User {
    int32 id =1;
    string email =2;
    string nickname = 3;
    string image = 4;
    string createdAt = 5;
    string updatedAt = 6;
    string deletedAt = 7;
}

message Users {
    repeated User users = 1;
}
message CreateUserDto {
    string email =1;
    string password = 2;
    string nickname = 3;
    bool marketingAgreed = 4;
}
message UpdateUserDto {
    int32 id =1;
    string email =2;
    string nickname = 3;
    string image = 4;
}
message UpdateUserProfileImageDto {
    int32 id =1;
    string image = 2;
}
message RemoveUserDto {
    int32 id =1;
}